<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary_light"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_cont_main"
        android:text="@string/titulo_main_app"
        android:textAlignment="center"
        android:textColor="@color/icons"
        android:textStyle="bold"
        android:textSize="@dimen/tamanio_titulo_main" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_main"
        android:text="@string/usuario"
        android:textSize="@dimen/tamanio_form_main"
        android:textColor="@color/icons"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/user_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamanio_form_main"
        android:padding="@dimen/padding_cont_main"
        android:inputType="number"
        android:digits="1234567890-k"
        android:maxLength="10"
        android:hint="@string/ingrese_usuario"
        android:background="@color/icons"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_main"
        android:paddingBottom="@dimen/padding_main"
        android:text="@string/password"
        android:textSize="@dimen/tamanio_form_main"
        android:textStyle="bold"
        android:textColor="@color/icons"/>
    <EditText
        android:id="@+id/pass_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tamanio_form_main"
        android:padding="@dimen/padding_cont_main"
        android:inputType="numberPassword"
        android:hint="@string/ingrese_passwd"
        android:maxLength="4"
        android:background="@color/icons"/>
    <Button
        android:id="@+id/btn_log"
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_cont_main"
        android:layout_marginTop="@dimen/margin_btn_main"
        android:text="@string/ingresar"
        android:textColor="@color/icons"
        android:textStyle="bold"
        android:textSize="@dimen/tamanio_form_main"
        />
</LinearLayout>