<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarPacienteActivity">
    <include layout="@layout/covid_toolbar">

    </include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_pacientes"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/padding_registro"
        android:textSize="@dimen/tamanio_titulo_registro"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView

            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_rut_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="@dimen/padding_registro"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/rut_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanio_form_registro"
            android:padding="@dimen/padding_registro"
            android:inputType="number"
            android:digits="1234567890-k"
            android:maxLength="10"
            android:hint="@string/ingrese_rut"
            android:textColorHint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView

            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_nombre_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="@dimen/padding_registro"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/nombre_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanio_form_registro"
            android:padding="@dimen/padding_registro"
            android:inputType="text"
            android:maxLength="50"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
            android:hint="@string/ingrese_nombre"
            android:textColorHint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView

            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_apellido_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="@dimen/padding_registro"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/apellido_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanio_form_registro"
            android:padding="@dimen/padding_registro"
            android:inputType="text"
            android:maxLength="50"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxyz"
            android:hint="@string/ingrese_apellido"
            android:textColorHint="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_fecha_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:paddingLeft="@dimen/padding_registro"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/fecha_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:padding="@dimen/padding_registro"
            android:textSize="@dimen/tamanio_form_registro"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccione_area_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:paddingLeft="@dimen/padding_registro"/>
        <Spinner
            android:layout_weight="2"
            android:id="@+id/trabajo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_registro"/>
    </LinearLayout>
    <Switch
        android:id="@+id/sintomas_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presenta_sintomas_de_covid"
        android:textSize="@dimen/tamanio_form_registro"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/padding_registro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_temperatura_form"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="@dimen/padding_list"/>
        <EditText
            android:id="@+id/temperatura_registro"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanio_form_registro"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:padding="@dimen/padding_registro"/>
    </LinearLayout>
    <Switch
        android:id="@+id/tos_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presenta_tos"
        android:textSize="@dimen/tamanio_form_registro"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/padding_registro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_registro">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_presion_arterial"
            android:textSize="@dimen/tamanio_form_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:padding="@dimen/padding_registro"/>
        <EditText
            android:id="@+id/presion_registro"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanio_form_registro"
            android:inputType="number"
            android:digits="0123456789"
            android:padding="@dimen/padding_registro"/>
    </LinearLayout>
    <Button
        android:id="@+id/ingresar_btn"
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_btn_registro"
        android:text="REGISTRAR"
        android:textColor="@color/icons"
        android:textSize="@dimen/tamanio_form_registro"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="@dimen/padding_registro"/>



</LinearLayout>